# borneo

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
src/: cli.rs  java.rs  main.rs  manifest.rs  maven.rs  project.rs  status.rs  types.rs
src/java/: jar.rs
src/manifest/: lock.rs
src/maven/: loader.rs  metadata.rs  pom.rs  xml.rs
